finish Email Auth
